# project-talos

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  talos.db
.antigravitycli/: 663b9637-8ab0-45c5-959e-964c1bfa2599.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
api/: Cargo.toml
api/migrations/: 0001_create_users.sql  0003_create_zones.sql  0004_create_shelly_config.sql  0005_create_sensor_mappings.sql  0006_create_sia_config.sql
api/src/: auth.rs  cors.rs  db.rs  main.rs  routes.rs  timers.rs
api/tests/: persistence_e2e.rs
core/src/: lib.rs
frontend/: app.js  dashboard.html  dashboard.js  eslint.config.js  index.html  index.js  package-lock.json  package.json  settings.html  settings.js  shared.js  style.css
modules/: Cargo.toml
modules/src/: lib.rs
modules/src/shelly/: mod.rs
modules/src/sia_dc09/: mod.rs
scripts/: e2e_smoke_test.sh
