[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
