[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
talos_core = { path = "../core", package = "core" }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
password-hash = { version = "0.5", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
