[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["ws"] }
talos_core = { path = "../core", package = "core" }
modules = { path = "../modules" }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
password-hash = { version = "0.5", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "trace"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[features]
default = ["sia_dc09", "shelly"]
sia_dc09 = ["modules/sia_dc09"]
shelly = ["modules/shelly"]

[dev-dependencies]
futures-util = "0.3.32"
tempfile = "3.27.0"
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.3", features = ["util"] }
