[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
talos_core = { path = "../core", package = "core" }
sia-rs = { git = "https://github.com/lepetoc/sia-rs", optional = true }
tracing = { version = "0.1.41", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["sync"] }
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"], optional = true }

[features]
default = ["sia_dc09", "shelly"]
sia_dc09 = ["dep:sia-rs", "dep:tracing"]
shelly = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tracing"]

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["sync", "macros", "rt"] }
